--- a/.env_example
+++ b/.env_example
@@ -1,1 +1,1 @@
-MONGO_CONNECTION=mongodb+srv://<username>:<password>@focus-cluster.zn8kqvr.mongodb.net/?retryWrites=true&w=majority&appName=focus-cluster
+MONGO_CONNECTION=mongodb+srv://<username>:<password>@name-of-your-cluster.xxxxxxx.mongodb.net/?retryWrites=true&w=majority&appName=name-of-your-cluster
